--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,19 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="home-container">
+  <div class="home-content">
+    <h1>La stratégie produit peut être sexy, votre roadmap aussi.</h1>
+    <p>Allez à l’essentiel, dessinez votre vision et notifiez vos collègues.</p>
+    <%= render 'components/button.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-pp" %>
+  </div>
+  <div class="svg-background">
+
+  </div>
+
+  <div class="footer">
+    <div class="cookies">
+      <p>🍪 Cookies</p>
+    </div>
+    <div class="legal">
+      <p>📋 Mentions Légales</p>
+    </div>
+  </div>
+</div>
