--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,6 +2,14 @@
   background: white;
   border: 1px solid black;
   border-radius: 7px;
-  box-shadow: 3px 3px 3px black;
+  box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.50);
   padding: 6px 50px;
+  margin: 0;
+  font-weight: bold;
+  transition-property: margin, box-shadow;
+}
+
+.btn-pp:hover {
+  box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
+  margin: 4px 0 0 4px;
 }
