--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,7 @@
 @import "avatar";
 @import "navbar";
 @import "button";
+@import "rectangle-bg";
+@import "colors";
+@import "link";
+@import "character";
