--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,18 @@
 <div class="home-container">
-  <div class="home-content">
-    <h1>La stratégie produit peut être sexy, votre roadmap aussi.</h1>
-    <p>Allez à l’essentiel, dessinez votre vision et notifiez vos collègues.</p>
-    <%= render 'components/button.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-pp" %>
-  </div>
-  <div class="svg-background">
 
+  <div class="home-content zi-9999">
+    <div class="home-baseline">
+      <h1>La stratégie produit peut être sexy, votre roadmap aussi.</h1>
+      <p>Allez à l’essentiel, dessinez votre vision et notifiez vos collègues.</p>
+    </div>
+    <div class="home-cta">
+      <%= render 'components/button.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-pp" %>
+    </div>
+  </div>
+
+
+  <div class="character zi-2">
+    <%= image_tag "char-yellow", alt: "fellowmap mascott" %>
   </div>
 
   <div class="footer">
@@ -17,3 +24,13 @@
     </div>
   </div>
 </div>
+
+<div class="rectangle-bg rectangle-bg-top">
+  <%= image_tag "rectangle-top.svg", alt: "top rectangle background" %>
+</div>
+
+<div class="rectangle-bg rectangle-bg-bottom rectangle-bg-yellow">
+  <%= image_tag "rectangle-bottom.svg", alt: "bottom rectangle background" %>
+</div>
+
+
