mobile ipad ok / clear some css / container margins

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,4 @@
-.btn-pp {
+.btn-white {
   background: white;
   border: 1px solid black;
   border-radius: 7px;
@@ -9,7 +9,7 @@
   transition-property: margin, box-shadow;
 }
 
-.btn-pp:hover {
+.btn-white:hover {
   box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
   margin: 4px 0 0 4px;
 }
