--- a/app/assets/stylesheets/components/_character.scss
+++ b/app/assets/stylesheets/components/_character.scss
@@ -2,5 +2,11 @@
   height: calc(100vh - 80px);
   position: absolute;
   display: flex;
-  right: 10%;
+  right: 17%;
+}
+
+@media(max-width:768px) {
+  .character {
+    display: none;
+  }
 }
