changed p to h2 on home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <div class="home-content zi-9999">
     <div class="home-baseline">
       <h1>La stratégie produit peut être sexy, votre roadmap aussi.</h1>
-      <p>Allez à l’essentiel, dessinez votre vision et notifiez vos collègues.</p>
+      <h2>Allez à l’essentiel, dessinez votre vision et notifiez vos collègues.</p>
     </div>
     <div class="home-cta">
       <%= render 'components/button.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-white" %>
