Adding svg to sign up and sign in

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,7 @@
 @import "avatar";
 @import "navbar";
 @import "button";
+@import "form";
 @import "rectangle-bg";
 @import "colors";
 @import "link";
