--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       <p>Allez à l’essentiel, dessinez votre vision et notifiez vos collègues.</p>
     </div>
     <div class="home-cta">
-      <%= render 'components/button.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-pp" %>
+      <%= render 'components/button_link.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-pp" %>
     </div>
   </div>
 
