--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,43 @@
-<h2>Sign up</h2>
+<div class="home-container">
+  <div class="home-content sign-up zi-9999">
+    <h1>Inscription</h1>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+      <div class="form-inputs">
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "email" },
+                    label: false
+                    %>
+        <%= f.input :password,
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    required: true,
+                    input_html: { autocomplete: "new-password" } %>
+      </div>
+
+      <div class="form-actions">
+        <%= f.button :submit, "Valider", class: "btn-pp" %>
+      </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  <div class="character zi-2">
+      <%= image_tag "char-red.svg", alt: "fellowmap mascott" %>
   </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+  <div class="rectangle-bg rectangle-bg-top">
+    <%= image_tag "rectangle-top.svg", alt: "top rectangle background" %>
+  </div>
+
+  <div class="rectangle-bg rectangle-bg-bottom rectangle-bg-red">
+    <%= image_tag "rectangle-bottom.svg", alt: "bottom rectangle background" %>
+  </div>
+</div>
