--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,34 +10,51 @@
                     required: true,
                     autofocus: true,
                     input_html: { autocomplete: "email" },
-                    label: false
-                    %>
+                    label: false,
+                    placeholder: "adresse email" %>
         <%= f.input :password,
                     required: true,
-                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                    input_html: { autocomplete: "new-password" } %>
+                    input_html: { autocomplete: "new-password" },
+                    label: false,
+                    placeholder: "mot de passe" %>
         <%= f.input :password_confirmation,
                     required: true,
-                    input_html: { autocomplete: "new-password" } %>
+                    input_html: { autocomplete: "new-password" },
+                    label: false,
+                    placeholder: "confirmation du mot de passe" %>
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Valider", class: "btn-pp" %>
+        <%= f.button :submit, "Valider", class: "btn-white" %>
       </div>
     <% end %>
 
-    <%= render "devise/shared/links" %>
+    <div class="devise-links">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
 
   <div class="character zi-2">
       <%= image_tag "char-red.svg", alt: "fellowmap mascott" %>
   </div>
+</div>
 
-  <div class="rectangle-bg rectangle-bg-top">
-    <%= image_tag "rectangle-top.svg", alt: "top rectangle background" %>
+<!-- Rectangles -->
+
+<div class="rectangle-bg rectangle-bg-top">
+  <%= image_tag "rectangle-top.svg", alt: "top rectangle background" %>
+</div>
+
+<div class="rectangle-bg rectangle-bg-bottom rectangle-bg-red">
+  <%= image_tag "rectangle-bottom.svg", alt: "bottom rectangle background" %>
+</div>
+
+<!-- Footer, absolute, en bas -->
+<div class="footer zi-9999">
+  <div class="cookies">
+    <p>🍪 Cookies</p>
   </div>
-
-  <div class="rectangle-bg rectangle-bg-bottom rectangle-bg-red">
-    <%= image_tag "rectangle-bottom.svg", alt: "bottom rectangle background" %>
+  <div class="legal">
+    <p>📋 Mentions Légales</p>
   </div>
 </div>
