--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       <h2>Allez à l’essentiel, dessinez votre vision et notifiez vos collègues.</p>
     </div>
     <div class="home-cta">
-      <%= render 'components/button_link.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-pp" %>
+      <%= render 'components/button_link.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-white" %>
     </div>
   </div>
 
@@ -26,7 +26,7 @@
 </div>
 
 
-<!-- Fotter, absolute, en bas -->
+<!-- Footer, absolute, en bas -->
 <div class="footer zi-9999">
   <div class="cookies">
     <p>🍪 Cookies</p>
