fixed link logo && some js on inputs to make them gud

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -9,7 +9,7 @@
   transition-property: margin, box-shadow;
 }
 
-.btn-white:hover {
+.btn-landing:hover {
   box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
   margin: 4px 0 0 4px;
 }
