--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light d-flex justify-content-between">
-  <%= link_to "#", class: "navbar-brand pl-4" do %>
+  <%= link_to root_path, class: "navbar-brand pl-4" do %>
     <%= image_tag "logo.png" %>
   <% end %>
 
