--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,3 +16,12 @@
   flex-grow: 0;
 }
 
+@media(min-width: 415px) {
+  .mobile-link {
+    display: none;
+  }
+}
+
+.navbar-links {
+  display: flex;
+}
