Created Roadmap model, controller and views

--- a/app/views/components/_button.html.erb
+++ b/app/views/components/_button.html.erb
@@ -16,7 +16,7 @@
   data-action="<%= action %>"
   data-target="<%= target %>"
   form="<%= form %>"
-  class="btn btn-default <%= classes %>"
+  class="btn btn-white <%= classes %>"
 >
   <%= text %>
 </button>
