--- a/app/assets/stylesheets/components/_typos.scss
+++ b/app/assets/stylesheets/components/_typos.scss
@@ -36,3 +36,11 @@ a:hover, .devise-links a {
 .navbar a {
   font-weight: bold;
 }
+
+.decoration-none:hover {
+  text-decoration: none;
+}
+
+.emoji-20 {
+  font-size: 20px;
+}
