--- a/app/views/roadmaps/edit.html.erb
+++ b/app/views/roadmaps/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="home-container">
   <div class="home-content sign-up zi-9999">
-    <h1>Créer une roadmap</h1>
+    <h1>Éditer une roadmap</h1>
 
     <%= simple_form_for @roadmap do |f| %>
       <div class="form-inputs">
@@ -12,7 +12,7 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Créer", class: "btn-white" %>
+        <%= f.button :submit, "Éditer", class: "btn-white" %>
       </div>
     <% end %>
 
