--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,13 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
-    <%= render 'components/navbar' %>
+
+    <% if action_name != "show" %>
+      <%= render 'components/navbar-logo' %>
+    <% else %>
+      <%= render 'components/navbar' %>
+    <% end %>
+
     <%= render 'components/flashes' %>
     <%= yield %>
 
