--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,8 +8,10 @@
     <div class="home-cta">
       <% if user_signed_in? %>
         <%= render 'components/button_link.html.erb', text: "C'est parti", link: roadmap_path(@roadmaps.last.id), class: "btn-white btn-landing" %>
+      <% elsif @roadmaps.nil? %>
+        <%= render 'components/button_link.html.erb', text: "C'est parti", link: roadmap_path(@roadmaps.last.id), class: "btn-white btn-landing" %>
       <% else %>
-        <%= render 'components/button_link.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-white btn-landing" %>
+        <%= render 'components/button_link.html.erb', text: "Connexion", link: new_roadmap_path, class: "btn-white btn-landing" %>
       <% end %>
 
     </div>
