--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,12 +6,12 @@
       <h2>Allez à l’essentiel, dessinez votre vision et notifiez vos collègues.</p>
     </div>
     <div class="home-cta">
-      <% if user_signed_in? %>
-        <%= render 'components/button_link.html.erb', text: "C'est parti", link: roadmap_path(@roadmaps.last.id), class: "btn-white btn-landing" %>
-      <% elsif @roadmaps.nil? %>
+      <% if @roadmaps.last.nil? && user_signed_in? %>
+        <%= render 'components/button_link.html.erb', text: "C'est parti", link: new_roadmap_path, class: "btn-white btn-landing" %>
+      <% elsif user_signed_in? %>
         <%= render 'components/button_link.html.erb', text: "C'est parti", link: roadmap_path(@roadmaps.last.id), class: "btn-white btn-landing" %>
       <% else %>
-        <%= render 'components/button_link.html.erb', text: "Connexion", link: new_roadmap_path, class: "btn-white btn-landing" %>
+        <%= render 'components/button_link.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-white btn-landing" %>
       <% end %>
 
     </div>
