Created Column + Improvement + KPi models ; Tried to add a column with the cta

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
     <% end %>
 
     <%= render 'components/flashes' %>
-    <%= yield %>
+    <div class="body-content">
+      <%= yield %>
+    </div>
 
     <%= javascript_pack_tag 'application' %>
   </body>
