--- a/app/views/columns/_new_column.html.erb
+++ b/app/views/columns/_new_column.html.erb
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="delete-column mt-3 text-center">
-    <%= render 'components/button', text:'Supprimer Thème', class: "red-btn" %>
+    <%= render 'components/button', text:'Supprimer Thème', class: "btn-red" %>
   </div>
 
 </div>
