--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -44,11 +44,4 @@
 </div>
 
 <!-- Footer, absolute, en bas -->
-<div class="footer zi-9999">
-  <div class="cookies">
-    <p>🍪 Cookies</p>
-  </div>
-  <div class="legal">
-    <p>📋 Mentions Légales</p>
-  </div>
-</div>
+<%= render 'components/footer.html.erb' %>
