--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,55 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="home-container">
+  <div class="home-content sign-up zi-9999">
+    <h1>Editer mon profil</h1>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+      <div class="form-inputs">
+        <%= f.input :email, required: true, autofocus: true, placeholder: 'Adresse email', label: false %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <p>En attente de la confirmation pour: <%= resource.unconfirmed_email %></p>
+        <% end %>
+
+        <%= f.input :password,
+                    required: false,
+                    placeholder: 'Nouveau mot de passe',
+                    label: false %>
+        <%= f.input :password_confirmation,
+                    required: false,
+                    placeholder: 'Confirmation du mot de passe',
+                    label: false %>
+        <%= f.input :current_password,
+                    required: true,
+                    input_html: { autocomplete: "current-password" },
+                    placeholder: 'Mot de passe actuel',
+                    label: false %>
+      </div>
+
+      <div class="form-actions">
+        <%= f.button :submit, "Update", class: "btn-white" %>
+      </div>
     <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+    <p>Marre de fellowmap ? <%= link_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Êtes-vous sûr(e) de vouloir supprimer votre compte ?" }, method: :delete %></p>
+
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+  <div class="character zi-2">
+      <%= image_tag "char-red.svg", alt: "fellowmap mascott" %>
   </div>
-<% end %>
+</div>
 
-<h3>Cancel my account</h3>
+<!-- Rectangles -->
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<div class="rectangle-bg rectangle-bg-top">
+  <%= image_tag "rectangle-top.svg", alt: "top rectangle background" %>
+</div>
 
-<%= link_to "Back", :back %>
+<div class="rectangle-bg rectangle-bg-bottom rectangle-bg-red">
+  <%= image_tag "rectangle-bottom.svg", alt: "bottom rectangle background" %>
+</div>
+
+<!-- Footer, absolute, en bas -->
+<%= render 'components/footer.html.erb' %>
