emojis in png - better

--- a/app/assets/stylesheets/components/_typos.scss
+++ b/app/assets/stylesheets/components/_typos.scss
@@ -41,6 +41,6 @@ a:hover, .devise-links a {
   text-decoration: none;
 }
 
-.emoji-20 {
-  font-size: 20px;
+.emoji, .emoji img {
+  width: 20px;
 }
