--- a/app/views/columns/_new_column.html.erb
+++ b/app/views/columns/_new_column.html.erb
@@ -7,11 +7,11 @@
     </div>
     <div class="goal">
       <%= render 'components/button', text:'Ajouter un objectif', class: "w-100 mb-4" %>
-      <p> 🎯 Objectif Business </p>
+      <p> <%= image_tag "target.png", class: "emoji" %> Objectif Business </p>
     </div>
     <div class="improvement">
       <%= render 'components/button', text:'Ajouter une amélioration', class: "w-100 mb-4" %>
-      <h2>🚀 Amélioration</h2>
+      <h2><%= image_tag "rocket.png", class: "emoji" %> Amélioration</h2>
       <p>Description de l'amélioration</p>
     </div>
     <div class="save">
