--- a/app/views/components/_roadmap-select.html.erb
+++ b/app/views/components/_roadmap-select.html.erb
@@ -1,20 +1,30 @@
 <% if controller_name === "roadmaps" && action_name === "show" %>
-  <div class="roadmap-selection pl-4">
-    <%= link_to "🗑️", roadmap_path(@roadmap),
-                      class: "decoration-none emoji-20",
-                      method: :delete,
-                      data: { confirm: "Êtes-vous sûr(e) de vouloir supprimer la roadmap? Son contenu disparaîtra à tout jamais." } %>
-    <%= link_to "✏️", edit_roadmap_path(@roadmap), class: "decoration-none emoji-20" %>
-    <button type="link" class="roadmap-name dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <span class="roadmap-name-ellipsis"><%= @roadmap.name %></span> <%= image_tag "dropdown-arrow.svg", alt: "dropdown arrow" %>
-    </button>
-    <div class="dropdown-menu dropdown dropdown-roadmap">
-      <div class="roadmaps-list">
-        <%= link_to "+ Créer une roadmap", new_roadmap_path, class: "c-blue dropdown-item" %>
-        <% @roadmaps.each do |roadmap| %>
-          <%= link_to roadmap.name, roadmap_path(roadmap), class: "dropdown-item" %>
-        <% end %>
+  <% if !current_user.nil? && Roadmap.where(user_id: current_user.id).map(&:id).include?(params[:id].to_i) %>
+  <!-- Si connecté & sur sa roadmap -->
+    <div class="roadmap-selection pl-4">
+      <%= link_to "🗑️", roadmap_path(@roadmap),
+                        class: "decoration-none emoji-20",
+                        method: :delete,
+                        data: { confirm: "Êtes-vous sûr(e) de vouloir supprimer la roadmap? Son contenu disparaîtra à tout jamais." } %>
+      <%= link_to "✏️", edit_roadmap_path(@roadmap), class: "decoration-none emoji-20" %>
+      <button type="link" class="roadmap-name dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span class="roadmap-name-ellipsis"><%= @roadmap.name %></span> <%= image_tag "dropdown-arrow.svg", alt: "dropdown arrow" %>
+      </button>
+      <div class="dropdown-menu dropdown dropdown-roadmap">
+        <div class="roadmaps-list">
+          <%= link_to "+ Créer une roadmap", new_roadmap_path, class: "c-blue dropdown-item" %>
+          <% @roadmaps.each do |roadmap| %>
+            <%= link_to roadmap.name, roadmap_path(roadmap), class: "dropdown-item" %>
+          <% end %>
+        </div>
       </div>
     </div>
-  </div>
+  <% else %>
+  <!-- Si pas connecté ou pas sur sa roadmap -->
+    <%= @roadmap.name %>
+  <% end %>
 <% end %>
+
+
+
+
