--- a/app/views/roadmaps/show.html.erb
+++ b/app/views/roadmaps/show.html.erb
@@ -1,10 +1,15 @@
 <div class="show-container d-flex">
   <div class="columns col-6 align-items-start d-flex">
-    <%= render 'columns/new_column' %>
-    <%= render 'components/button', text: "+ Crée ton premier thème", class: "create-theme", form: "", type: "" %>
-  </div>
-
-  <div class="text-helper col-6 align-self-center">
-    <h2>Lance toi et crée ta 1ère colonne !</h2>
+    <% if !current_user.nil? && Roadmap.where(user_id: current_user.id).map(&:id).include?(params[:id].to_i) %>
+    <!-- Si connecté & sur sa roadmap -->
+      <%= render 'columns/column_admin' %>
+      <%= render 'components/button', text: "+ Crée ton premier thème", class: "create-theme", form: "", type: "" %>
+      <div class="text-helper col-6 align-self-center">
+        <h2>Lance toi et crée ta 1ère colonne !</h2>
+      </div>
+    <% else %>
+    <!-- Si pas connecté ou pas sur sa roadmap -->
+      <%= render 'columns/column_guest' %>
+    <% end %>
   </div>
 </div>
