--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,8 +13,9 @@
       <% else %>
         <%= render 'components/button_link.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-white btn-landing" %>
       <% end %>
-
     </div>
+
+    <%= render 'components/footer.html.erb' %>
   </div>
 
   <div class="character zi-2">
@@ -30,16 +31,5 @@
 
 <div class="rectangle-bg rectangle-bg-bottom rectangle-bg-yellow">
   <%= image_tag "rectangle-bottom.svg", alt: "bottom rectangle background" %>
-</div>
-
-
-<!-- Footer, absolute, en bas -->
-<div class="footer zi-2">
-  <div class="cookies">
-    <p>🍪 Cookies</p>
-  </div>
-  <div class="legal">
-    <p>📋 Mentions Légales</p>
-  </div>
 </div>
 
