--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -64,6 +64,12 @@
   }
 }
 
+.roadmap-selection {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
 span.roadmap-name-ellipsis {
   text-overflow: ellipsis;
   overflow: hidden;
