--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="footer zi-9999">
   <div class="cookies">
-    <p>🍪 Cookies</p>
+    <p><%= image_tag "cookie.png", class: "emoji" %> Cookies</p>
   </div>
   <div class="legal">
-    <p>📋 Mentions Légales</p>
+    <p><%= image_tag "note.png", class: "emoji" %> Mentions Légales</p>
   </div>
 </div>
