--- a/app/views/components/_roadmap-select.html.erb
+++ b/app/views/components/_roadmap-select.html.erb
@@ -2,11 +2,11 @@
   <% if !current_user.nil? && Roadmap.where(user_id: current_user.id).map(&:id).include?(params[:id].to_i) %>
   <!-- Si connecté & sur sa roadmap -->
     <div class="roadmap-selection pl-4">
-      <%= link_to "🗑️", roadmap_path(@roadmap),
-                        class: "decoration-none emoji-20",
+      <%= link_to image_tag("trash.png"), roadmap_path(@roadmap),
+                        class: "decoration-none emoji mr-3",
                         method: :delete,
                         data: { confirm: "Êtes-vous sûr(e) de vouloir supprimer la roadmap? Son contenu disparaîtra à tout jamais." } %>
-      <%= link_to "✏️", edit_roadmap_path(@roadmap), class: "decoration-none emoji-20" %>
+      <%= link_to image_tag("pen.png"), edit_roadmap_path(@roadmap), class: "decoration-none emoji mr-2" %>
       <button type="link" class="roadmap-name dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="roadmap-name-ellipsis"><%= @roadmap.name %></span> <%= image_tag "dropdown-arrow.svg", alt: "dropdown arrow" %>
       </button>
