--- a/app/assets/stylesheets/components/_typos.scss
+++ b/app/assets/stylesheets/components/_typos.scss
@@ -11,6 +11,10 @@ h2 {
   padding-bottom: 15px;
 }
 
+h3 {
+  font-size: 16px;
+}
+
 p {
   font-size: 14px;
 }
@@ -39,8 +43,4 @@ a:hover, .devise-links a {
 
 .decoration-none:hover {
   text-decoration: none;
-}
-
-.emoji, .emoji img {
-  width: 20px;
 }
