--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -2,7 +2,7 @@
 
   <div class="navbar-logo logo-hide">
     <%= link_to root_path, class: "navbar-brand pl-4" do %>
-      <%= image_tag "logo.png" %>
+      <%= image_tag "logo.svg" %>
     <% end %>
   </div>
 
