--- a/app/views/components/_roadmap-select.html.erb
+++ b/app/views/components/_roadmap-select.html.erb
@@ -3,10 +3,10 @@
   <!-- Si connecté & sur sa roadmap -->
     <div class="roadmap-selection pl-4">
       <%= link_to image_tag("trash.png"), roadmap_path(@roadmap),
-                        class: "decoration-none emoji mr-3",
+                        class: "decoration-none emoji emoji-roadmap",
                         method: :delete,
                         data: { confirm: "Êtes-vous sûr(e) de vouloir supprimer la roadmap? Son contenu disparaîtra à tout jamais." } %>
-      <%= link_to image_tag("pen.png"), edit_roadmap_path(@roadmap), class: "decoration-none emoji mr-2" %>
+      <%= link_to image_tag("pen.png"), edit_roadmap_path(@roadmap), class: "decoration-none emoji emoji-roadmap" %>
       <button type="link" class="roadmap-name dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="roadmap-name-ellipsis"><%= @roadmap.name %></span> <%= image_tag "dropdown-arrow.svg", alt: "dropdown arrow" %>
       </button>
@@ -18,6 +18,7 @@
           <% end %>
         </div>
       </div>
+      <%= render 'components/share_button' %>
     </div>
   <% else %>
   <!-- Si pas connecté ou pas sur sa roadmap -->
