--- a/app/javascript/scripts/roadmap.js.erb
+++ b/app/javascript/scripts/roadmap.js.erb
@@ -3,7 +3,9 @@ const columns = document.querySelector(".columns")
 
 console.log(createTheme);
 
-createTheme.addEventListener('click', (event) => {
-  console.log(event);
-  columns.insertAdjacentHTML("afterbegin", "<%= render 'columns/new_column' %>");
-});
+if(typeof(createTheme) != "undefined") {
+  createTheme.addEventListener('click', (event) => {
+    console.log(event);
+    columns.insertAdjacentHTML("afterbegin", "<%= render 'columns/new_column' %>");
+  });
+}
