--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 .home-container {
-  min-height: calc(100vh - 80px);
+  min-height: 100vh;
   position: relative;
   display: flex;
   align-items: center;
