emojis left to change + add column button margin

--- a/app/views/columns/_column_guest.html.erb
+++ b/app/views/columns/_column_guest.html.erb
@@ -6,10 +6,10 @@
       <p>Description du problème rencontré par les utilisateurs</p>
     </div>
     <div class="goal">
-      <p> 🎯 Objectif Business </p>
+      <p><%= image_tag "target.png", class: "emoji" %> Objectif Business </p>
     </div>
     <div class="improvement">
-      <h2>🚀 Amélioration</h2>
+      <h3><%= image_tag "rocket.png", class: "emoji" %>Amélioration</h3>
       <p>Description de l'amélioration</p>
     </div>
   </div>
