--- a/app/assets/stylesheets/components/_typos.scss
+++ b/app/assets/stylesheets/components/_typos.scss
@@ -8,11 +8,13 @@ h1 {
 h2 {
   font-size: 20px;
   line-height: 27px;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
+  font-weight: bold;
 }
 
 h3 {
   font-size: 16px;
+  font-weight: bold;
 }
 
 p {
